# sample-smart-home-assistant-agent-on-agentcore

./: .gitignore  README.md  deploy.sh
a2a-agent-registry/: README.md  approve_records.py  demo_reset.py  deploy.py  smoke_test.py  teardown.py
admin-console/: package-lock.json  package.json  webpack.config.js
agent/: Dockerfile  agent.py  pyproject.toml  requirements.txt  session_storage.py  vision.py  voice_agent.py  voice_session.py
agent/memory/: session.py
agent/skills/all-devices-on/: SKILL.md
agent/skills/browser-use/: SKILL.md
agent/skills/fan-control/: SKILL.md
agent/skills/led-control/: SKILL.md
agent/skills/oven-control/: SKILL.md
agent/skills/rice-cooker-control/: SKILL.md
agent/skills/user-feedback/: SKILL.md
agent/skills/weather-lookup/: SKILL.md
agent/tests/: conftest.py  test_a2a.py  test_a2a_auth.py  test_a2a_perms_load.py  test_agent_images.py  test_browser_use.py  test_session_storage.py  test_vision.py
agent/tools/: a2a.py  a2a_auth.py  browser_use.py  device_control.py
cdk/: package-lock.json  package.json
chatbot/: package-lock.json  package.json  tsconfig.json  webpack.config.js
device-simulator/: package-lock.json  package.json  tsconfig.json  webpack.config.js
docs/: admin_manual_管理员使用手册.md  architecture-and-design.md
scripts/: 01-install-deps.sh  02-build-frontends.sh  03-cdk-bootstrap.sh  04-cdk-deploy.sh  05-fix-cognito.sh  06-deploy-agentcore.sh  07-seed-skills.sh  seed-skills.py  setup-agentcore.py  teardown-agentcore.py
skill-erp/: package-lock.json  package.json  webpack.config.js
vision-latency-test/: .gitignore  README.md  aggregate.py  download_images.py  manifest.json  package-lock.json  package.json  playwright.config.ts  run.py  (+2 more)
(+110 files in other folders)
