[project]
name = "smarthome-agent"
version = "1.0.0"
description = "Smart Home Assistant Agent for AgentCore Runtime"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=1.25.0",
    "strands-agents-tools",
    "strands-agents-builder",
    "bedrock-agentcore",
    "boto3",
    "requests",
    "mcp",
    "websockets>=14.0",
    "aws_sdk_bedrock_runtime>=0.3.0",
    "aws-opentelemetry-distro>=0.10.0",
    "opentelemetry-exporter-otlp-proto-http",
    "browser-use>=0.1.40",
    "playwright>=1.50",
    # A2A downstream client (agent/tools/a2a.py). 0.3.x matches the Strands
    # A2AServer runtimes published under a2a-agent-registry/.
    "a2a-sdk<1.0",
    "httpx>=0.28",
]
